--- a/projects/templates/projects/feeds.html
+++ b/projects/templates/projects/feeds.html
@@ -107,7 +107,7 @@
               {% if item.user_liked %}
                   <i class="fas fa-thumbs-up liked-icon"></i> <span>Unlike ({{ item.likes.count }})</span>
               {% else %}
-                  <i class="far fa-thumbs-up"></i> <span>Like ({{ item.likes.count }})</span>
+                  <i class="far fa-thumbs-up"></i> <span>Like</span>
               {% endif %}
           </button>
       </form>
