--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -30,10 +30,11 @@
         <h3>Resources</h3>
         <hr>
         <ul>
-            <li><a href="{% url 'projects' %}">Projects</a></li>
-            <li><a href="{% url 'training' %}">Training</a></li>
-            <li><a href="{% url 'active_conversations' %}">Messaging</a></li>
-            <li><a href="{% url 'training' %}">Competitions</a></li>
+            <li><a href="{% url 'training' %}">Return to Feed</a></li>
+
+            <li><a href="{% url 'training' %}">Explore Training</a></li>
+            <li><a href="{% url 'active_conversations' %}">Send a Message</a></li>
+            <li><a href="{% url 'training' %}">Start Competing</a></li>
         </ul>
     </div>
 
