--- a/projects/templates/projects/feeds.html
+++ b/projects/templates/projects/feeds.html
@@ -52,21 +52,6 @@
           </a>
                       <span class="feed-card-time">{{ item.created_at|timesince }} ago</span>
           </div>
-
-          {% if item.link_preview %}
-<div class="feed-link-preview">
-    <a href="{{ item.link_preview.url }}" target="_blank">
-        {% if item.link_preview.image %}
-            <img src="{{ item.link_preview.image }}" alt="Preview Image" class="feed-preview-img">
-        {% endif %}
-        <div class="feed-preview-content">
-            <h4 class="feed-preview-title">{{ item.link_preview.title }}</h4>
-            <p class="feed-preview-description">{{ item.link_preview.description }}</p>
-        </div>
-    </a>
-</div>
-{% endif %}
-
         {% endif %}
       </div>
 
@@ -79,8 +64,19 @@
         {% elif item.project %}
         <a href="{% url 'project' item.project.id %}" class="feed-project-snippet-link">
           <div class="feed-project-snippet">
-            <p class="feed-project-title"><strong>{{ item.project.title }}</strong></p>
-            <p class="feed-project-desc">{{ item.project.description|truncatechars:100 }}</p>
+            {% if post.link_preview %}
+            <div class="training-link-preview">
+                <a href="{{ post.link_preview.url }}" target="_blank">
+                    {% if post.link_preview.image %}
+                        <img src="{{ post.link_preview.image }}" alt="Preview Image" class="training-preview-img">
+                    {% endif %}
+                    <div class="training-preview-content">
+                        <h4 class="training-preview-title">{{ post.link_preview.title }}</h4>
+                        <p class="training-preview-description">{{ post.link_preview.description }}</p>
+                    </div>
+                </a>
+            </div>
+        {% endif %}
           </div>
         </a>
       {% endif %}
